# tinkoff-dfo-agi-in-2024

./: README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  __main__.py  main.py  pyproject.toml
backend/models/: __init__.py  http_validation_error.py  location_inner.py  request.py  response.py  validation_error.py
backend/routes/: __init__.py  chat.py
backend/settings/: settings.py
backend/utils/: __init__.py  append_documents_to_conversation.py  generate_answer.py  load_chat_model.py  load_models.py  mean_pooling.py  search_in_clickhouse.py  txt2embeddings.py
clickhouse/: create_table.sql  insert_ch.ipynb  yandex_gpt.ipynb
clickhouse/volumes/clickhouse/docker-entrypoint-initdb.d/: init-db.sh
inference/: base.ipynb
settings/: settings.py
