[tool.poetry]
name = "tinkoff-dfo-agi-in-2024"
version = "0.1.0"
description = ""
authors = ["Sergei Volchkov <c4s23@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
